--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "httpx>=0.26.0",
     "openai>=1.10.0",
     "anthropic>=0.18.0",
+    "deepgram-sdk>=5.0.0",
+    "zhipuai>=2.0.0",
     "stripe>=8.0.0",
     "websockets>=12.0",
 ]
