Milestone 1: Context upload foundation for AI Q&A generation
Implement comprehensive file upload system for resume, company info, and job postings:

Database Schema:
- Add user_contexts table (resume, company_info, job_posting, additional)
- Extend qa_pairs table with generation tracking (batch_id, strategy, sources)
- Add generation_batches table for job tracking and auditing
- Full RLS policies for user data isolation

Backend Services:
- upload_service.py: PDF extraction (PyPDF2), Vision API OCR, text processing
- context_upload.py: 6 REST endpoints for upload/retrieval/deletion
- File validation, storage, and text extraction pipeline

Dependencies:
- PyPDF2>=3.0.0 for PDF text extraction
- pillow>=10.0.0 for image processing
- aiofiles>=23.0.0 for async file I/O

Features:
- PDF resume upload with PyPDF2 text extraction
- Screenshot OCR via OpenAI Vision API (gpt-4o)
- Text paste input support
- File size validation and MIME type checking
- Context management (list, filter by type, delete)

Next: Q&A generation service with 30 pairs across 4 categories

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "zhipuai>=2.0.0",
     "stripe>=8.0.0",
     "websockets>=12.0",
+    "PyPDF2>=3.0.0",
+    "pillow>=10.0.0",
+    "aiofiles>=23.0.0",
 ]
 
 [project.optional-dependencies]
