--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,6 @@
 {
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/.next",
-  "devCommand": "cd frontend && npm run dev",
-  "installCommand": "cd frontend && npm install",
   "framework": "nextjs",
-  "regions": ["sfo1"]
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install"
 }
