--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,9 +26,12 @@ JWT_SECRET=your_jwt_secret_here
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Stripe
-STRIPE_SECRET_KEY=your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+# Stripe (Payment Processing)
+# Get these from: https://dashboard.stripe.com/test/apikeys
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+# Webhook secret: https://dashboard.stripe.com/test/webhooks
+STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
 
 # CORS
 CORS_ORIGINS=http://localhost:3000
