--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -16,3 +16,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # API
 NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# Site Configuration
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_SITE_DOMAIN=interviewmate.tech
+NEXT_PUBLIC_SITE_NAME=InterviewMate
