--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "aiofiles>=23.0.0",
     "pgvector>=0.2.0",
     "numpy>=1.24.0",
+    "qdrant-client>=1.7.0",
 ]
 
 [project.optional-dependencies]
