Add Lemon Squeezy payment integration alongside Stripe
New Features:
- Created Lemon Squeezy payment API (backend/app/api/lemon_squeezy.py)
- Supports same features as Stripe: credits, one-time purchases
- Webhook handling for order_created and order_refunded events
- Signature verification for security

Configuration:
- Added LEMON_SQUEEZY_* environment variables to config
- Added PAYMENT_PROCESSOR setting to switch between stripe/lemon_squeezy
- Updated .env.example with Lemon Squeezy configuration

Integration:
- Registered lemon_squeezy router in main.py
- Parallel implementation - Stripe code untouched
- httpx already in requirements.txt for API calls

Database:
- Reuses existing payment_transactions and user_subscriptions tables
- Added lemon_squeezy_order_id and lemon_squeezy_customer_id fields support

Next: Frontend integration to choose payment processor

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,5 +33,22 @@ STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 # Webhook secret: https://dashboard.stripe.com/test/webhooks
 STRIPE_WEBHOOK_SECRET=whsec_your_stripe_webhook_secret
 
+# Lemon Squeezy (Payment Processing - Alternative to Stripe)
+# Get these from: https://app.lemonsqueezy.com/settings/api
+LEMON_SQUEEZY_API_KEY=your_lemon_squeezy_api_key
+LEMON_SQUEEZY_STORE_ID=your_store_id
+# Webhook secret from: https://app.lemonsqueezy.com/settings/webhooks
+LEMON_SQUEEZY_WEBHOOK_SECRET=your_webhook_secret
+# Product variant IDs (get after creating products in dashboard)
+LEMON_SQUEEZY_VARIANT_CREDITS_4=
+LEMON_SQUEEZY_VARIANT_CREDITS_10=
+LEMON_SQUEEZY_VARIANT_CREDITS_15=
+LEMON_SQUEEZY_VARIANT_AI_GENERATOR=
+LEMON_SQUEEZY_VARIANT_QA_MANAGEMENT=
+
+# Payment Processor Selection
+# Choose "stripe" or "lemon_squeezy"
+PAYMENT_PROCESSOR=lemon_squeezy
+
 # CORS
 CORS_ORIGINS=http://localhost:3000
